...
    case ActivityType.walk:
      return 'walk';
  }
}

class Activity {
  Activity({
    required this.id,
    required this.activityType,
    this.activityTypeId,
    required this.startedAt,
    this.endedAt,
    this.name,
...
